<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <View
        style="@style/Line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height" />

    <RelativeLayout
        android:id="@+id/rlTime"
        android:layout_margin="@dimen/regular_dim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/on_off_laser"
            android:textSize="@dimen/text_size_about" />

        <Switch
            android:id="@+id/setLaser"
            android:textOn="On"
            android:textOff="Off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

    <View
        style="@style/Line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height" />



        <CheckBox
            android:id="@+id/setOneLaser"
            android:text="@string/on_off_one_laser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <CheckBox
            android:layout_marginTop="8dp"
            android:id="@+id/setSecondLaser"
            android:text="@string/on_off_second_laser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           />


    <View
        style="@style/Line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height" />

</LinearLayout>