<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar" />



        <View
            style="@style/Line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height" />

        <RelativeLayout
            android:id="@+id/rlTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/regular_dim">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/set_time"
                android:textSize="@dimen/text_size_about" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_keyboard_arrow_right_black_24dp" />

        </RelativeLayout>

        <View
            style="@style/Line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height" />

        <RelativeLayout
            android:id="@+id/rlAlarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/regular_dim">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/set_alarm"
                android:textSize="@dimen/text_size_about" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_keyboard_arrow_right_black_24dp" />

        </RelativeLayout>

        <View
            style="@style/Line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height" />

        <RelativeLayout
            android:id="@+id/rlLaser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/regular_dim">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/manager_laser"
                android:textSize="@dimen/text_size_about" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_keyboard_arrow_right_black_24dp" />

        </RelativeLayout>

        <View
            style="@style/Line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height" />

        <RelativeLayout
            android:id="@+id/rlLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/regular_dim">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/set_light"
                android:textSize="@dimen/text_size_about" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_keyboard_arrow_right_black_24dp" />

        </RelativeLayout>

        <View
            style="@style/Line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height" />

        <RelativeLayout
            android:id="@+id/rlManual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/regular_dim">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/manual"
                android:textSize="@dimen/text_size_about" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_keyboard_arrow_right_black_24dp" />

        </RelativeLayout>

        <View
            style="@style/Line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height" />

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:divider="@null"
            android:stackFromBottom="true"
            android:transcriptMode="alwaysScroll" />

        <View
            style="@style/Line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height" />

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>